fix(card): set height/width to prevent stretching (#2002)
height: auto on .bx--card caused cards to be vertically stretch in flex containers.
Changing to the exact height value resolves this.

--- a/consumables/scss/components/card/card.scss
+++ b/consumables/scss/components/card/card.scss
@@ -17,8 +17,8 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  width: 12.5rem;
-  height: auto;
+  width: rem(200px);
+  height: rem(235px);
   background-color: $color__navy-gray-3;
   border: 1px solid $color__navy-gray-2;
 
